--- a/lindera-wasm/Cargo.toml
+++ b/lindera-wasm/Cargo.toml
@@ -15,12 +15,8 @@ license = { workspace = true }
 crate-type = ["cdylib"]
 
 [features]
-embed-ipadic = [
-    "lindera/embed-ipadic",
-] # Embed IPADIC dictionary (Japanese)
-embed-unidic = [
-    "lindera/embed-unidic",
-] # Embed UniDic dictionary (Japanese)
+embed-ipadic = ["lindera/embed-ipadic"] # Embed IPADIC dictionary (Japanese)
+embed-unidic = ["lindera/embed-unidic"] # Embed UniDic dictionary (Japanese)
 embed-ko-dic = ["lindera/embed-ko-dic"] # Embed ko-dic dictionary (Korean)
 embed-cc-cedict = [
     "lindera/embed-cc-cedict",
@@ -35,13 +31,12 @@ once_cell = "1.21.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.149"
 serde-wasm-bindgen = "0.6.5"
-wasm-bindgen = { version = "0.2.106" }
-js-sys = "0.3.83"
+wasm-bindgen = { version = "0.2.108" }
+js-sys = "0.3.85"
 
 lindera = { workspace = true }
 
 [dev-dependencies]
 serde_json = "1.0.149"
-wasm-bindgen-test = "0.3.56"
-wasm-bindgen = { version = "0.2.106" }
-
+wasm-bindgen-test = "0.3.58"
+wasm-bindgen = { version = "0.2.108" }
