--- a/lindera-wasm/Cargo.toml
+++ b/lindera-wasm/Cargo.toml
@@ -27,16 +27,16 @@ embed-cjk = [
 default = []
 
 [dependencies]
-once_cell = "1.21.3"
-serde = { version = "1.0.228", features = ["derive"] }
-serde_json = "1.0.149"
+js-sys = "0.3.85"
+once_cell = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 serde-wasm-bindgen = "0.6.5"
 wasm-bindgen = { version = "0.2.108" }
-js-sys = "0.3.85"
 
 lindera = { workspace = true }
 
 [dev-dependencies]
-serde_json = "1.0.149"
+serde_json = { workspace = true }
 wasm-bindgen-test = "0.3.58"
 wasm-bindgen = { version = "0.2.108" }
