--- a/lindera-python/Cargo.toml
+++ b/lindera-python/Cargo.toml
@@ -17,18 +17,12 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [features]
-embed-ipadic = [
-    "lindera/embed-ipadic",
-] # Include Japanese dictionary (IPADIC)
+embed-ipadic = ["lindera/embed-ipadic"] # Include Japanese dictionary (IPADIC)
 embed-ipadic-neologd = [
     "lindera/embed-ipadic-neologd",
 ] # Include Japanese dictionary (IPADIC NEologd)
-embed-unidic = [
-    "lindera/embed-unidic",
-] # Include Japanese dictionary (UniDic)
-embed-ko-dic = [
-    "lindera/embed-ko-dic",
-] # Include Korean dictionary (ko-dic)
+embed-unidic = ["lindera/embed-unidic"] # Include Japanese dictionary (UniDic)
+embed-ko-dic = ["lindera/embed-ko-dic"] # Include Korean dictionary (ko-dic)
 embed-cc-cedict = [
     "lindera/embed-cc-cedict",
 ] # Include Chinese dictionary (CC-CEDICT)
@@ -39,7 +33,11 @@ train = ["lindera/train"] # Enable training functionality
 default = ["train"] # No directories included
 
 [dependencies]
-pyo3 = { version = "0.27.2", features = ["extension-module", "abi3-py310", "generate-import-lib"] }
+pyo3 = { version = "0.28.0", features = [
+    "extension-module",
+    "abi3-py310",
+    "generate-import-lib",
+] }
 serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 num_cpus = { workspace = true }
