--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,10 +37,10 @@ lindera-cli = { version = "2.1.1", path = "lindera-cli" }
 lindera-python = { version = "2.1.1", path = "lindera-python" }
 lindera-wasm = { version = "2.1.1", path = "lindera-wasm" }
 
-anyhow = "1.0.100"
+anyhow = "1.0.101"
 byteorder = "1.5.0"
-clap = { version = "4.5.56", features = ["derive", "cargo"] }
-criterion = { version = "0.8.1", default-features = false, features = [
+clap = { version = "4.5.57", features = ["derive", "cargo"] }
+criterion = { version = "0.8.2", default-features = false, features = [
     "html_reports",
 ] }
 csv = "1.4.0"
@@ -58,11 +58,9 @@ memmap2 = "0.9.9"
 num_cpus = "1.17.0"
 once_cell = "1.21.3"
 percent-encoding = "2.3.2"
-rand = { version = "0.9.2", default-features = false, features = [
-    "small_rng",
-] } # Specify `default-features` and `features` to support WebAssembly
+rand = { version = "0.10.0", default-features = false } # Specify `default-features` to support WebAssembly
 regex = "1.12.3"
-reqwest = { version = "0.13.1", features = [
+reqwest = { version = "0.13.2", features = [
     "rustls",
 ], default-features = false }
 rkyv = { version = "0.8.14", features = ["bytecheck"] }
